--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -187,6 +187,7 @@
 	&__with-tooltip:hover &__tooltip {
 		visibility: visible;
 		opacity: 1;
+		z-index: 100;
 	}
 
 	&__icon {
